namespace tictactoe
{
  public enum Symbol
  {
    X,
    O,
    Empty
  }
}