@startuml

package "Controllers" {
    class TicTacToe{
    - _menu : FormMenu
    - _sessionGames : GameController[]
    - _sessionViews : ViewController[]
    + StartMatch() : void
    + HandleTurn(int index) : void
    + EndMatch() : void
    + ExitApp() : void
    }
    class Controller {
    - _main : TicTacToe
    }
    class GameController extends Controller{
    - _match : Match
    - _first : User
    - _second : User
    + Turn(int index) : void
    }
    class ViewController extends Controller{
    - _view : FormSession
    + DrawCell(int cell, Symbol symbol) : void
    + Turn(int index) : void
    + EndMatch() : void
    }
}

package "Models" {
    class Grid{
      - _cells : Cell[9]
      + IsEmpty(int index) : bool
    }
    class Cell {
     - _symbol : Symbol
     + Symbol : Symbol
    }
    class Match{
    - _controller : GameController
    - _current : Player
    - _x : Player
    - _o : Player
    + GetCurrent() : Symbol
    + Turn(int index) : bool
    + Victory() : bool
    }
    class Player extends User {
    - _symbol : Symbol
    }
    enum Symbol{
    X 
    O
    }
    class User {
    - _name : string
    - _points : int
    }
}

package "Views" {
    class "FormMenu" {
    - _main : TicTacToe
    + BtnQuitClick() : void
    + BtnStartClick() : void
    }
    class "FormSession" {
    - _main : TicTacToe
    + GridClick() : void
    + BtnQuitClick() : void
    }
}

TicTacToe *-- GameController
TicTacToe *-- ViewController
TicTacToe  *--  FormMenu

Match *-- Grid 
Grid  *--  Cell
GameController *-- Match
ViewController  *--  FormSession
Controller o-- TicTacToe
Match o-- Player
Match o-- Player
Match o-- Player

@enduml